--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,19 @@
 #container{
-    display: flex;
-    box-sizing: border-box;
-    flex-direction: column;
+    
+    display: grid;
+    grid-template-columns: auto auto auto auto;
     height: 600px;
-    width: 400px;
+    width: 600px;
     background-color: whitesmoke;
     border: 10px;
     border-radius: 20px;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 #screen{
@@ -18,17 +25,27 @@
 
 }
 
-.num{ 
-    display: flex;
-    flex-wrap: wrap;
-    border: 10px;
+/* #btn{ 
+    
     height: 90px;
     width: 90px;
     border-radius: 12px;
     transition-duration: 0.4s;
     color: #04AA6D;
 
+} */
+
+.clr{
+  grid-column-start: 1;
+  grid-column-end: 3;
+  
 }
+
+.symeq{
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+
 .button:hover {
     background-color: #04AA6D; /* Green */
     color: white;
